kubernetes/kyverno_simple_policies/kyverno_mutate_add_label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-labels
  annotations:
    policies.kyverno.io/title: Add Team Label
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: Low
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      For use cases for forced label injection, this is typically the case for deployments
      that need to follow an established pattern of labels on resources.
spec:
  rules:
    - name: add-team
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(team): kyverno-inject-label
